--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,10 @@ dependencies = [
     "ipywidgets>=8.1.5",
     "logfire>=3.11.0",
     "loguru>=0.7.3",
+    "mcp[cli]>=1.5.0",
+    "polars>=1.26.0",
     "pydantic-ai>=0.0.46",
+    "pytest>=8.3.5",
 ]
 
 [project.scripts]
