--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,12 +10,14 @@ requires-python = ">=3.12"
 dependencies = [
     "ipykernel>=6.29.5",
     "ipywidgets>=8.1.5",
+    "langfuse>=2.60.2",
     "logfire>=3.11.0",
     "loguru>=0.7.3",
     "mcp[cli]>=1.5.0",
     "polars>=1.26.0",
-    "pydantic-ai>=0.0.46",
+    "pydantic-ai>=0.0.50.dev3",
     "pytest>=8.3.5",
+    "python-dotenv>=1.1.0",
 ]
 
 [project.scripts]
@@ -27,3 +29,6 @@ build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.sdist]
 exclude = ["**/", "!src/"]
+
+[tool.uv.sources]
+pydantic-ai = {git = "https://github.com/pydantic/pydantic-ai.git", branch = "main"}
