--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,9 @@ dependencies = [
     "logfire>=3.11.0",
     "loguru>=0.7.3",
     "mcp[cli]>=1.5.0",
+    "pandas>=2.2.3",
     "polars>=1.26.0",
+    "pyarrow>=19.0.1",
     "pydantic-ai>=0.0.50.dev3",
     "pytest>=8.3.5",
     "python-dotenv>=1.1.0",
