--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = [
 ]
 requires-python = ">=3.12"
 dependencies = [
+    "faker>=37.1.0",
     "ipykernel>=6.29.5",
     "ipywidgets>=8.1.5",
     "langfuse>=2.60.2",
