--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = [
     "python-dotenv>=1.1.0",
     "streamlit>=1.45.0",
     "tenacity>=9.1.2",
+    "watchdog>=6.0.0",
 ]
 
 [project.scripts]
