--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "logfire>=3.11.0",
     "loguru>=0.7.3",
     "mcp[cli]>=1.5.0",
+    "openai>=1.78.0",
     "pandas>=2.2.3",
     "polars>=1.26.0",
     "pyarrow>=19.0.1",
