--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,7 @@ dependencies = [
     "pandas>=2.2.3",
     "polars>=1.26.0",
     "pyarrow>=19.0.1",
-    "pydantic-ai>=0.0.50.dev3",
+    "pydantic-ai>=0.2.9",
     "python-dotenv>=1.1.0",
     "streamlit>=1.45.0",
     "tenacity>=9.1.2",
@@ -36,10 +36,11 @@ build-backend = "hatchling.build"
 [tool.hatch.build.targets.sdist]
 exclude = ["**/", "!src/"]
 
-[tool.uv.sources]
-pydantic-ai = {git = "https://github.com/pydantic/pydantic-ai.git", branch = "main"}
 
 [dependency-groups]
 dev = [
     "pytest>=8.3.5",
 ]
+
+[tool.ruff]
+line-length = 115
