--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ dependencies = [
     "ipykernel>=6.29.5",
     "ipywidgets>=8.1.5",
     "langfuse>=2.60.2",
-    "logfire>=3.11.0",
+    "logfire[httpx]>=3.11.0",
     "loguru>=0.7.3",
     "mcp[cli]>=1.5.0",
     "openai>=1.78.0",
